Add remove BB obstacles
Add remove BB obstacles

--- a/Languages/English.ini
+++ b/Languages/English.ini
@@ -337,6 +337,12 @@ LblTHSnipeBeforeTiles=Add Tiles
 LblTHSnipeBeforeTiles_Info_01=Max numbers of tiles from border to consider TH as external
 TxtDropOrder=Enter sequence order for drop of troop #
 [MBR GUI Design Child Attack - Attack Standard]
+ChkAttackNearDarkElixirDrill_Info_01=Drop troops near Dark Elixir Drills
+ChkAttackNearElixirCollector_Info_01=Drop troops near Elixir Collectors
+ChkAttackNearGoldMine_Info_01=Drop troops near Gold Mines
+ChkRandomSpeedAtk=Randomize delay for Units && Waves
+ChkSmartAttackRedArea=Use Smart Attack: Near Red Line.
+ChkSmartAttackRedArea_Info_01=Use Smart Attack to detect the outer 'Red Line' of the village to attack. And drop your troops close to it.
 CmbSmartDeploy_Info_01=Sides, then Troops
 CmbSmartDeploy_Info_02=Troops, then Sides
 CmbStandardDropOrder_Info_01=Select a preset troop drop order.
@@ -357,12 +363,6 @@ CmbStandardDropSides_Item_03=three sides
 CmbStandardDropSides_Item_04=all sides equally
 CmbStandardDropSides_Item_05=DE Side Attack
 CmbStandardDropSides_Item_06=TH Side Attack
-ChkAttackNearDarkElixirDrill_Info_01=Drop troops near Dark Elixir Drills
-ChkAttackNearElixirCollector_Info_01=Drop troops near Elixir Collectors
-ChkAttackNearGoldMine_Info_01=Drop troops near Gold Mines
-ChkRandomSpeedAtk=Randomize delay for Units && Waves
-ChkSmartAttackRedArea=Use Smart Attack: Near Red Line.
-ChkSmartAttackRedArea_Info_01=Use Smart Attack to detect the outer 'Red Line' of the village to attack. And drop your troops close to it.
 Group_01=Deploy
 Label_01=Troop Drop Order
 Label_02=Attack on
@@ -525,7 +525,7 @@ TxtBarbarians=Barbarians
 TxtBattleBlimps=Battle Blimps
 TxtBowlers=Bowlers
 TxtDragons=Dragons
-TxtEDragon=Electro Dragons
+TxtEDragon=Electro Dragon
 TxtElectroDragons=Electro Dragons
 TxtGiants=Giants
 TxtGoblins=Goblins
@@ -1238,6 +1238,8 @@ ChkClanGamesTimeRemaining=Time Remaining
 ChkClanGamesYourScore=Your Score
 ChkCleanYard=Remove Obstacles
 ChkCleanYard_Info_01=Check this to automatically clear Yard from Trees, Trunks, etc.
+ChkCleanYardBB=Remove Obstacles
+ChkCleanYardBB_Info_01=Check this to automatically clear Yard from Trees, Trunks etc.
 ChkCollect=Collect Resources && Loot Cart
 ChkCollect_Info_01=Check this to automatically collect the Villages Resources
 ChkCollect_Info_02=from Gold Mines, Elixir Collectors and Dark Elixir Drills.
